@@ -35,7 +35,8 @@ top::TopObjectSelection* ttHMultileptonLooseObjectLoader::init(std::shared_ptr<t
     //user wants likelihood electrons
     LikeEnum::Menu operatingPoint = ttHMultilepton::ElectronLikelihoodDC14::textToEgammaEnum(topConfig->electronID());
     LikeEnum::Menu operatingPointLoose = ttHMultilepton::ElectronLikelihoodDC14::textToEgammaEnum(topConfig->electronIDLoose());
-    objectSelection->electronSelection(new ttHMultilepton::ElectronLikelihoodDC14(topConfig->electronPtcut(), topConfig->electronVetoLArCrack(), operatingPoint, operatingPointLoose, new top::StandardIsolation()));
+    //objectSelection->electronSelection(new ttHMultilepton::ElectronLikelihoodDC14(topConfig->electronPtcut(), topConfig->electronVetoLArCrack(), operatingPoint, operatingPointLoose, new top::StandardIsolation()));
+    objectSelection->electronSelection(new ttHMultilepton::ElectronLikelihoodDC14(5000., topConfig->electronVetoLArCrack(), operatingPoint, operatingPointLoose, nullptr));
   } else {
     std::cout << "\nHo hum\n";
     std::cout << "Not sure it makes sense to use a mix of LH and cut-based electrons for the tight/loose definitions\n";
@@ -45,8 +46,8 @@ top::TopObjectSelection* ttHMultileptonLooseObjectLoader::init(std::shared_ptr<t
     exit(1);
   }
   
-  objectSelection->muonSelection(new top::MuonDC14(10000., 2.5, nullptr)); //new top::ApproxPTVarCone(0.05, 0.)));
-  objectSelection->jetSelection(new top::JetDC14(25000., 2.5, 0.));
+  objectSelection->muonSelection(new top::MuonDC14(5000., 2.5, nullptr)); //new top::ApproxPTVarCone(0.05, 0.)));
+  objectSelection->jetSelection(new top::JetDC14(10000., 10.5, 0.));
   objectSelection->tauSelection(new top::TauDC14(10000., false, TauAnalysisTools::JETID::JETIDNONE, TauAnalysisTools::JETID::JETIDNONE, TauAnalysisTools::ELEID::ELEIDBDTTIGHT));
   
   //and the overlap removal
