@@ -28,7 +28,7 @@ PACKAGE_BINFLAGS     =
 PACKAGE_LIBFLAGS     = 
 
 # the list of packages we depend on:
-PACKAGE_DEP          = TopObjectSelectionTools TopEventSelectionTools TopEvent TopConfiguration TopAnalysis TrigDecisionTool MuonSelectorTools
+PACKAGE_DEP          = TopObjectSelectionTools TopEventSelectionTools TopEvent TopConfiguration TopAnalysis TrigDecisionTool MuonSelectorTools xAODEgamma
 
 # the list of packages we use if present, but that we can work without :
 PACKAGE_TRYDEP       = 
