@@ -1,3 +1,9 @@
+2015-06-02 Giuseppe Salamanna <salaman AT cern.ch>
+	* Added truth origin and type for leptons (from MCTruthClassifier)
+	* Changed muon quality type to unsigned short int from bool
+	* Added muon type and lepton d0
+	* Lowered cuts for leptons and jets to very low values to be genuinely inclusive
+	
 2015-05-29 David Hohn <david.hohn@cern.ch>
 	* Added reading/writing of taus
 
